# lia-term

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
